--- a/construction/src/main/resources/com/marlo/pms/management/MGT-TaskData-subform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT-TaskData-subform.form
@@ -9,9 +9,10 @@
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="rangeFormula" value="{approve,APPROVAL_TO_END_PROCESS;reject,APPROVAL_TO_END_PROCESS}"/>
+<property name="rangeFormula" value="{approve,Approve;reject,Reject}"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
+<property name="defaultValueFormula" value="=&quot;approve&quot;"/>
 <property name="inputBinding" value="taskData/pathCd"/>
 <property name="outputBinding" value="taskData/pathCd"/>
 <property name="fieldClass" value="java.lang.String"/>
