--- a/construction/src/main/resources/com/marlo/pms/management/MGT-taskform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT-taskform.form
@@ -14,5 +14,16 @@
 <property name="defaultSubform" value="MGT-BusinessData-subform.form"/>
 <property name="fieldClass" value="java.lang.Object"/>
 </field>
+<field position="1" name="application_taskData" type="Subform" id="1546169870">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="application/taskData"/>
+<property name="outputBinding" value="application/taskData"/>
+<property name="defaultSubform" value="MGT-TaskData-subform.form"/>
+<property name="fieldClass" value="java.lang.Object"/>
+</field>
 <dataHolder inputId="application" name="#E9E371" type="dataModelerEntry" outId="application" value="com.marlo.pms.management.MGTApplication" id="application"/>
 </form>
