--- a/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
@@ -3,34 +3,34 @@
 <property name="name" value="MGT-BusinessData-subform.form"/>
 <property name="displayMode" value="default"/>
 <property name="status" value="0"/>
-<field position="0" name="businessData_name" type="InputText" id="26123251">
+<field position="0" name="mgtBusinessData_name" type="InputText" id="26123251">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;name (businessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;name (businessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="size" value="45"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
-<property name="inputBinding" value="businessData/name"/>
-<property name="outputBinding" value="businessData/name"/>
+<property name="inputBinding" value="mgtBusinessData/name"/>
+<property name="outputBinding" value="mgtBusinessData/name"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="1" name="businessData_description" type="InputTextArea" id="1794445543">
+<field position="1" name="mgtBusinessData_description" type="InputTextArea" id="1794445543">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
 <property name="height" value="5"/>
-<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;description (businessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;description (businessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
 <property name="size" value="50"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
-<property name="inputBinding" value="businessData/description"/>
-<property name="outputBinding" value="businessData/description"/>
+<property name="inputBinding" value="mgtBusinessData/description"/>
+<property name="outputBinding" value="mgtBusinessData/description"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<dataHolder inputId="businessData" name="#E9E371" type="dataModelerEntry" outId="businessData" value="com.marlo.pms.common.MGTBusinessData" id="businessData"/>
+<dataHolder inputId="mgtBusinessData" name="#E9E371" type="dataModelerEntry" outId="mgtBusinessData" value="com.marlo.pms.common.MGTBusinessData" id="mgtBusinessData"/>
 </form>
