--- a/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
@@ -48,7 +48,7 @@
 <property name="cancelItemText" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="deleteItems" value="true"/>
 <property name="updateItems" value="false"/>
-<property name="visualizeItems" value="false"/>
+<property name="visualizeItems" value="true"/>
 <property name="hideCreateItem" value="true"/>
 <property name="expanded" value="false"/>
 <property name="enableTableEnterData" value="false"/>
