--- a/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT-BusinessData-subform.form
@@ -17,7 +17,7 @@
 <property name="outputBinding" value="mgtBusinessData/name"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="1" name="mgtBusinessData_description" type="InputTextArea" id="1794445543">
+<field position="3" name="mgtBusinessData_description" type="InputTextArea" id="1794445543">
 <property name="fieldRequired" value="false"/>
 <property name="groupWithPrevious" value="false"/>
 <property name="height" value="5"/>
@@ -32,9 +32,10 @@
 <property name="outputBinding" value="mgtBusinessData/description"/>
 <property name="fieldClass" value="java.lang.String"/>
 </field>
-<field position="2" name="mgtBusinessData_attachments" bag-type="com.marlo.pms.common.Attachment" type="MultipleSubform" id="1800010447">
+<field position="5" name="mgtBusinessData_attachments" bag-type="com.marlo.pms.common.Attachment" type="MultipleSubform" id="1800010447">
 <property name="fieldRequired" value="false"/>
-<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;attachments (mgtBusinessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;attachments (mgtBusinessData)quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
@@ -53,6 +54,31 @@
 <property name="expanded" value="false"/>
 <property name="enableTableEnterData" value="false"/>
 <property name="fieldClass" value="java.util.List"/>
+</field>
+<field position="1" name="mgtBusinessData_budget" type="InputTextPrimitiveDouble" id="661881051">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;budget (mgtBusinessData)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="mgtBusinessData/budget"/>
+<property name="outputBinding" value="mgtBusinessData/budget"/>
+<property name="fieldClass" value="double"/>
+</field>
+<field position="2" name="mgtBusinessData_requireSubcontract" type="CheckBoxPrimitiveBoolean" id="2010151165">
+<property name="fieldRequired" value="false"/>
+<property name="groupWithPrevious" value="false"/>
+<property name="label" value="quot;enquot;,quot;requireSubcontract (mgtBusinessData)quot;"/>
+<property name="readonly" value="false"/>
+<property name="inputBinding" value="mgtBusinessData/requireSubcontract"/>
+<property name="outputBinding" value="mgtBusinessData/requireSubcontract"/>
+<property name="fieldClass" value="boolean"/>
+</field>
+<field position="4" name=":decorator_0" type="Separator" id="825652947">
+<property name="fieldRequired" value="false"/>
+<property name="label" value="quot;SSClassquot;,quot;quot;quot;SSStylequot;,quot;quot;quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
+<property name="readonly" value="false"/>
+<property name="cssStyle" value="width: 400px"/>
+<property name="fieldClass" value="Separator"/>
 </field>
 <dataHolder inputId="mgtBusinessData" name="#E9E371" type="dataModelerEntry" outId="mgtBusinessData" value="com.marlo.pms.common.MGTBusinessData" id="mgtBusinessData"/>
 </form>
