{/construction/src/main/resources/com/marlo/pms/management/MGT_APPROVAL-TaskData-subform.form}

--- a/construction/src/main/resources/com/marlo/pms/management/MGT_APPROVAL-TaskData-subform.form
+++ b/construction/src/main/resources/com/marlo/pms/management/MGT_APPROVAL-TaskData-subform.form
@@ -9,7 +9,7 @@
 <property name="errorMessage" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="title" value="quot;caquot;,quot;quot;quot;dequot;,quot;quot;quot;enquot;,quot;quot;quot;esquot;,quot;quot;quot;frquot;,quot;quot;quot;jaquot;,quot;quot;quot;ptquot;,quot;quot;quot;zhquot;,quot;quot;"/>
 <property name="readonly" value="false"/>
-<property name="rangeFormula" value="{approve,Approve;reject,Reject}"/>
+<property name="rangeFormula" value="{APPROVAL_TO_NEXT_PROCESS,Approve;APPROVAL_TO_END_PROCESS,Reject,APPROVAL_TO_REVIEW,Review}"/>
 <property name="isHTML" value="false"/>
 <property name="hideContent" value="false"/>
 <property name="defaultValueFormula" value="=&quot;approve&quot;"/>
